--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,30 +1,77 @@
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
+<html>
+  <head>
+    <!-- Tab Title -->
+    <title>Eat da Burger!</title>
+    <!-- Tab Image -->
+    <link rel="icon" href="/assets/img/Krabby_Patty.png">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Custom Styling -->
+    <link rel="stylesheet" href="/assets/css/burger_style.css">
+  </head>
+  <body>
+  
+    <!-- Page Container -->
+    <div class="container">
+      
+      <br>
 
-	<link href="https://fonts.googleapis.com/css?family=Crafty+Girls|Fontdiner+Swanky" rel="stylesheet">
+      <!-- Burger Image -->
+      <center>
+        <div class="row">
+          <img src="/assets/img/Krabby_Patty.png">
+        </div>
+      </center>
 
-	<!-- Compiled and minified Materialize CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+      <!-- Page Title -->
+      <center>
+        <h1 class="red_font">Eat da Burger! <small class="tiny_text">Best with a side of audio.</small></h1>
+      </center>
+      
+      <br>
+      
 
-	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-	<title>Burgerlicious Devour Menu</title>
-</head>
+      <!-- Burger Content from index.handlebars -->
+      {{{body}}}
 
-<body>
-	<img src="/assets/img/cute_burger.jpeg" width="400px" id="cute_burger">
 
-	{{{ body }}}
+      <br><br>
 
-	<footer class="burgerFooter">
-		<div class="footer-copyright">
-			<div class="container">
-				<span class="grey-text text-lighten-4">© 2017 angrbrd entertainment</span>
-				<a class="grey-text text-lighten-4 right" href="https://github.com/angrbrd">Reference Work</a>
-			</div>
-		</div>
-	</footer>
-</body>
+      <!-- Input New Burgers Form -->
+      <form action="burger/create" method="POST"> 
+        
+        <!-- Text Area Input -->
+        <div class="row">
+          <!-- Empty Div to help center textarea -->
+          <div class="col-md-3"></div> 
+
+          <!-- Burger Input Box -->
+          <div class="form-group col-md-6">
+            <center><label for="new_burger" class="red_font">Request a new burger and place your order!</label></center>
+            <textarea class="form-control" columns="8" rows="4" id="new_burger" name="burger_name"></textarea>
+          </div>
+
+          <!-- Empty Div to help center textarea -->
+          <div class="col-md-3"></div> 
+        </div>
+      
+        <!-- Submit Button -->
+        <center>
+          <button id="submit-button" type="submit" class="btn btn-danger">Place Order</button>
+        </center>
+
+      </form>
+
+      <br>
+
+    </div>
+
+    <!-- Link in jQuery -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+    <!-- Link in Local JavaScript (for sound effects) -->
+    <script src="/assets/javascript/burger_sounds.js"></script>
+
+  </body>
 </html>
